# tower-defence

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HISTORY.md  PLAN.md  QWEN.md  README.md  REQUIREMENTS.md  TASKS.md  errors.txt  game_macos.icns  levelEditor.py  main.cpp  package-lock.json  qwen-code-export-2026-04-14T16-03-00-714Z.md  report.md  task.md  tower-defence.rar  tower-defence.slnx  tower-defence.vcxproj  tower-defence.vcxproj.filters  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
android/: .gitignore  AndroidManifest.xml  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: app.cpp
android/app/src/main/headers/: app.h
android/app/src/main/jniLibs/armeabi-v7a/data/config/: enemies.cfg  towers.cfg
android/app/src/main/jniLibs/armeabi-v7a/data/levels/: level01.map  level07.map  level08.map  level09.map
android/app/src/main/res/values/: styles.xml
android/app/src/test/cpp/: app_test.cpp
container-context/: index.html  style.css
data/config/: enemies.cfg  towers.cfg
data/levels/: level01.map  level02.map  level03.map  level04.map  level05.map  level06.map  level07.map  level08.map  level09.map  level10.map  level11.map  level12.map  level13.map  level14.map  level15.map  level16.map  level17.map  level18.map  level19.map  level20.map
includes/: Base.hpp  Button.hpp  CameraManager.hpp  Colors.hpp  Enemy.hpp  Game.hpp  GameData.hpp  HUD.hpp  Label.hpp  Map.hpp  Menu.hpp  Projectile.hpp  ResourceManager.hpp  SaveManager.hpp  SettingsManager.hpp  Tile.hpp  Tower.hpp  UpgradeManager.hpp  WaveSystem.hpp
includes/ui/: Button.hpp  Container.hpp  Image.hpp  NineSlice.hpp  Slider.hpp  Text.hpp  Widget.hpp
includes/utils/: FileReader.hpp  Logger.hpp  Math.hpp  Random.hpp
macos/: Info.plist.in
src/: Base.cpp  Button.cpp  Enemy.cpp  Game.cpp  GameData.cpp  HUD.cpp  Label.cpp  Map.cpp  Menu.cpp  Projectile.cpp  ResourceManager.cpp  SaveManager.cpp  SettingsManager.cpp  Tower.cpp  UpgradeManager.cpp  WaveSystem.cpp
src/ui/: Button.cpp  Container.cpp  Image.cpp  NineSlice.cpp  Slider.cpp  Text.cpp  Widget.cpp
src/utils/: FileReader.cpp  Logger.cpp  SettingsManager.cpp
